exports[`test does not render when not connected 1`] = `
<View
  style={undefined}>
  <View
    style={undefined}>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={undefined}>
      Fake User
    </Text>
  </View>
  <View
    style={undefined}>
    <View
      style={undefined}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            undefined,
            undefined,
          ]
        }>
        You must have an internet connection to use Zooniverse Mobile
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders correctly when connected 1`] = `
<View
  style={undefined}>
  <View
    style={undefined}>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={undefined}>
      Fake User
    </Text>
  </View>
  <View
    style={undefined}>
    <ScrollView>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}>
        <View
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "#18807F",
              },
            ]
          }>
          <View
            style={undefined}>
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontFamily": "zoo-font",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Array [
                    undefined,
                    undefined,
                  ],
                ]
              }>
              
            </Text>
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={undefined}>
            Biology
          </Text>
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontFamily": "FontAwesome",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }>
            
          </Text>
        </View>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}>
        <View
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "#46D178",
              },
            ]
          }>
          <View
            style={undefined}>
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontFamily": "zoo-font",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Array [
                    undefined,
                    undefined,
                  ],
                ]
              }>
              
            </Text>
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={undefined}>
            Nature
          </Text>
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontFamily": "FontAwesome",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }>
            
          </Text>
        </View>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}>
        <View
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "#512BAD",
              },
            ]
          }>
          <View
            style={undefined}>
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontFamily": "zoo-font",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Array [
                    undefined,
                    undefined,
                  ],
                ]
              }>
              
            </Text>
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={undefined}>
            Space
          </Text>
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontFamily": "FontAwesome",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }>
            
          </Text>
        </View>
      </TouchableOpacity>
    </ScrollView>
  </View>
</View>
`;
